k8s-system-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://host.minikube.internal:8000/api/v1/auth/k8s-check"
    nginx.ingress.kubernetes.io/auth-signin: "http://vulnavep.com:5173/admin-login"
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.vulnavep.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://host.minikube.internal:8000/api/v1/auth/k8s-check"
    nginx.ingress.kubernetes.io/auth-signin: "http://vulnavep.com:5173/admin-login"
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.vulnavep.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
